rpa-bot/1.5/modules/ROOT/pages/_partials/hard-soft-requirements.adoc
== Hardware Requirements

* For optimal performance, use a dedicated computer for running the RPA Bot.

[%header%autowidth.spread,cols=".^a,.^a]
|===
| Minimum | Recommended
| Dual-core 2 GHz CPU (MMX/SSE compatible) | Dual-core 3 GHz CPU (MMX/SSE compatible)
| 8 GB of RAM | 16 GB of RAM
| 30 GB of disk space | 30 GB (SSD) of disk space
|===

=== Unsupported Hardware Configurations

* Notebooks with Intel Graphics 520 and 530

== Software Requirements

[%header%autowidth.spread,cols=".^a,.^a,]
|===
| Software | Required version
| Microsoft .NET Framework
 a|
* 4.5
* 4.7.2
| Operating System
 a|

include::rpa-home::partial$windows-versions-support.adoc[]

|===

=== System Settings

* Display resolution:
** Minimum: 1280 x 1080
** Recommended: Full HD 1080p (1920 × 1080) or higher
* `Custom scaling` of text and other items on the screen: 100%
* `ClearType`: turned off

=== Requirements for the Secure Session Technology

Secure Sessions are hidden Desktop sessions that run in the background and are accessible only to the bot. An additional advantage of using Secure Sessions is that the bot can multiply itself to run several process instances in parallel.

To use Secure Sessions you must ensure that all prerequisites are met and all responsible persons are informed.

* You can't use Secure Sessions with any operating system running on the Microsoft Azure Virtual Desktop Infrastructure (VDI).
* The RPA Bot service runs under the `Local System` account per default.
** To use another account, ensure that it has permission to run Windows services.
* The RPA Bot service runs processes under user accounts on the same computer or within the same domain.
** Use dedicated accounts and a user-naming scheme to differentiate between local users and domain users and between human users and bot users.
** User accounts used by the bot to run processes must belong to the `Remote Desktop Users` group and must have permission to establish a local RDP session via the local loopback address 127.0.0.2.
* To enable a bot to run more than one (Windows 10, Windows 11) or two (Windows Server) Secure Sessions simultaneously, ensure that a terminal server software with enough licensed users is installed on the computer where the bot is installed. The computer must have enough resources to execute several processes simultaneously: 2 GB or more RAM per session.
* Before deploying a run configuration on a bot that has only one licensed Secure Session, do not disconnect the session, instead sign out the specified user.
** Do not sign in to a computer where a bot with one licensed Secure Session is running a process.

=== File System Permission Requirements

RPA Bot needs full write access to some folders that are critical to its functioning. To avoid issues during the setup process and subsequent RPA Bot executions, ensure that:

* You install RPA Bot as an administrator
+
If you don't run the setup file as an administrator, the installation process might not finish successfully. If this happens, ensure you reinstall RPA Bot by running the setup file as an administrator.

* RPA Bot has full write access to the following folders and any subfolders and files inside them:
+
** `C:\Program Files\Mulesoft\RPABot`
** `C:\ProgramData\Mulesoft\RPABot`

* Your environment is not blocking the execution of any RPA process
+
The operating system can block the execution of certain files. Ensure that all executable (`.exe`) files inside the RPA Bot home directory and its subfolders are allowed to run.

=== Internet Route Requirements

To communicate with RPA Manager, RPA Bot requires you to enter the following Internet route in the *RPA Manager to connect* field on the RPA Bot Configurator pop-up:

* `+https://[your subdomain].rpa.mulesoft.com+`

In addition, it is also necessary to open the internally used URL `+https://*.cloudfront.net+`, which is done typically by your network or security team.

See xref:rpa-bot::configuration#common-settings[Configuring RPA Bot] for more information about the RPA Bot Configurator pop-up.

== Compatibility

[%header%autowidth.spread]
|===
|Application |Version
|RPA Builder | 6.4.0 and later
|RPA Recorder | 6.4.0 and later
|===
